final commit, added dynamic routing

--- a/CrudApp/app.json
+++ b/CrudApp/app.json
@@ -15,7 +15,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.not_akbar404.CrudApp"
     },
     "web": {
       "bundler": "metro",
@@ -36,6 +37,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "de8a9e00-a44c-4dee-aa45-3969536f797f"
+      }
+    },
+    "owner": "not_akbar404"
   }
 }
