--- a/CrudApp/package.json
+++ b/CrudApp/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.28",
@@ -28,7 +29,7 @@
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.1",
+    "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
@@ -40,8 +41,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "@expo-google-fonts/inter": "^0.2.3"
-
+    "expo-dev-client": "~5.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
